Placeholder: z-index fix

--- a/src/components/Placeholder/Placeholder.css
+++ b/src/components/Placeholder/Placeholder.css
@@ -11,7 +11,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 2;
+  z-index: 1;
   padding-top: inherit;
   padding-bottom: inherit;
 }
